<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add">Add</string>
    <string name="app_name">Nameless WOL</string>
    <string name="appearance">Appearance</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="invalid_host">Invalid host address</string>
    <string name="invalid_mac">Invalid MAC address</string>
    <string name="invalid_port">Invalid port</string>
    <string name="magic_packet_failed">Failed to send magic packet to \'%1$s\'</string>
    <string name="magic_packet_sending">Sending magic packet to \'%1$s\'</string>
    <string name="no_devices">No devices</string>
    <string name="device_edit">Edit Device</string>
    <string name="device_info_error">\'%1$s\' has incorrect or missing information</string>
    <string name="device_missing_name">Device needs a name</string>
    <string name="device_new">New Device</string>
    <string name="device_not_found">Couldn\'t find device</string>
    <string name="devices_none">No devices</string>
    <string name="pref_theme">Select Theme</string>
    <string name="pref_theme_summary">You must restart the app after changing.</string>
    <string name="save">Save</string>
    <string name="shortcut_created">Shortcut created for \'%1$s\'</string>
    <string name="shortcut_text">Wake \'%1$s\'</string>
    <string name="shortcut_widget_name">Nameless WOL Shortcut</string>
    <!-- Actions -->
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="action_wake">Wake</string>
    <!-- Dialog Strings -->
    <string name="dialog_host">Host</string>
    <string name="dialog_mac">MAC Address</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_port">Port</string>

</resources>