<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="7">

        <TextView
            android:padding="12dip"
            android:text="@string/dialog_name"
            android:textSize="@dimen/abc_text_size_medium_material"
            app:layout_row="0" />

        <TextView
            android:padding="12dip"
            android:text="@string/dialog_host"
            android:textSize="@dimen/abc_text_size_medium_material"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:padding="12dip"
            android:text="@string/dialog_port"
            android:textSize="@dimen/abc_text_size_medium_material"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:padding="12dip"
            android:text="@string/dialog_mac"
            android:textSize="@dimen/abc_text_size_medium_material"
            app:layout_column="0"
            app:layout_row="6" />

        <EditText
            android:id="@+id/editText_name"
            android:background="@null"
            android:inputType="text"
            android:minWidth="260dip"
            android:padding="6dip"
            app:layout_column="1"
            app:layout_row="0" />

        <EditText
            android:id="@+id/editText_host"
            android:background="@null"
            android:inputType="text"
            android:minWidth="260dip"
            android:padding="6dip"
            app:layout_column="1"
            app:layout_row="2" />

        <EditText
            android:id="@+id/editText_port"
            android:background="@null"
            android:inputType="number"
            android:minWidth="260dip"
            android:padding="6dip"
            app:layout_column="1"
            app:layout_row="4" />

        <EditText
            android:id="@+id/editText_mac"
            android:background="@null"
            android:inputType="text"
            android:minWidth="260dip"
            android:padding="6dip"
            app:layout_column="1"
            app:layout_row="6" />

        <!--Separators-->
        <View
            android:layout_height="0.1dip"
            android:background="@android:color/darker_gray"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="1" />

        <View
            android:layout_height="0.1dip"
            android:background="@android:color/darker_gray"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="3" />

        <View
            android:layout_height="0.1dip"
            android:background="@android:color/darker_gray"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="5" />
    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dip"
        android:layout_marginStart="6dip"
        android:text="@string/save" />

</LinearLayout>